# coffeeldr

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: logging.rs  main.rs
scripts/: build.py
src/: beacon.rs  beacon_pack.rs  coff.rs  error.rs  ffi.rs  lib.rs  loader.rs  parse.rs  parser.rs  util.rs  utils.rs
tests/: Cargo.toml  README.md
tests/src/: lib.rs
