[package]
name = "coffeeldr"
version = "0.2.0"
authors = ["João Victor"]
description = "A COFF (Common Object File Format) loader written in Rust"
license = "MIT"
repository = "https://github.com/joaoviictorti/coffeeldr"
homepage = "https://github.com/joaoviictorti/coffeeldr"
readme = "README.md"
keywords = ["coff", "loader", "windows", "rust", "redteam"]
categories = ["os", "security"]
edition = "2021"
exclude = [
    ".gitignore",
    "cli/",
    "target/",
    "tests/",
]

[dependencies]
binrw = "0.14.1"
byteorder = "1.5.0"
dinvk = "0.1.3"
log = "0.4.22"
printf-compat = "0.1.1"
thiserror = "1.0.64"
hex = "0.4.3"
obfstr = "0.4.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Memory", 
    "Win32_System_SystemInformation", 
    "Win32_System_SystemServices", 
    "Win32_System_Threading",
    "Win32_Security"
]}

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
