[package]
name = "coffeeldr"
version = "0.3.2"
edition = "2024"
license = "MIT"
readme = "README.md"
authors = ["João Victor"]
description = "A COFF (Common Object File Format) loader written in Rust"
repository = "https://github.com/joaoviictorti/coffeeldr"
homepage = "https://github.com/joaoviictorti/coffeeldr"
documentation = "https://docs.rs/coffeeldr/latest"
keywords = ["coff", "loader", "windows", "rust", "redteam"]
categories = ["os", "security"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
log = "0.4.22"
obfstr = "0.4.4"
dinvk = "0.4.0"
binrw = { version = "0.15.0", default-features = false }
spin = { version = "0.10.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
printf-compat = { version = "0.2.0", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Memory",  
    "Win32_System_SystemServices", 
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming"
]}

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]
